# xchat

./: COMPILE_NOTES.txt  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
intl/: Makefile.in
plugins/: Makefile.in
plugins/perl/: Makefile.in
plugins/python/: Makefile.in  python.c
plugins/tcl/: Makefile.in
plugins_extra/: README.md  cap_sasl_xchat.pl  cap_sasl_xchat.py  cap_sasl_xchat_old.pl
po/: Makefile.in  Makevars  be.po  ca.po  cs.po  de.po  el.po  es.po  fi.po  fr.po  gl.po  hu.po  it.po  ja.po  kn.po  ko.po  lt.po  mk.po  nl.po  pa.po  pl.po  pt.po  ru.po  sq.po  sr.po  sv.po  th.po  uk.po  vi.po  xchat.pot
src/: Makefile.in
src/common/: Makefile.in  cfgfiles.c  cfgfiles.h  chanopt.c  ignore.c  notify.c  proto-irc.c  server.c  servlist.c  ssl.c  text.c  tree.c  tree.h  url.c  url.h  xchat.c  xchat.h
src/common/dbus/: Makefile.in
src/fe-gtk/: Makefile.in  chanlist.c  editlist.c  fe-gtk.c  fkeys.c  palette.c  plugin-tray.c  urlgrab.c  xtext.c
src/fe-text/: Makefile.in
src/pixmaps/: Makefile.in
